addedd burning (onchain) and freezing (internally) functionality
